--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -14,6 +14,7 @@
     text-align: center;
     width: 100%;
     height: 20vh;
+    // padding-top: 5px;
     margin-bottom: 10%;
 }
 
@@ -41,16 +42,61 @@
     font-size: 1.2rem;
 }
 
-// .graphs-section {
-//  ADD THIS BACK IN WHEN YOU HAVE THE GRAPHS SECTION
-// }
+.graphs-section {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.grant-rates-by-office-graph-container {
+    text-align: center;
+    height: 165px;
+    font-size: 1.5rem;
+    font-family: 'acumin';
+}
+
+.gr-office-img {
+    height: 165px;
+    width: 320px;
+    margin-bottom: 10%;
+}
+
+.grant-rates-by-nationality-container {
+    text-align: center;
+    margin-bottom: 3%;
+    margin-left: -15px;
+    font-size: 1.5rem;
+    font-family: 'acumin';
+}
+
+.gr-nationality-img {
+    height: 175px;
+    width: 200px;
+    margin-bottom: 7%;
+    margin-left: -15px;
+}
+
+.grant-rates-over-time-container {
+    text-align: center;
+    height: 165px;
+    font-size: 1.5rem;
+    font-family: 'acumin';
+}
+
+.gr-overtime-img {
+    height: 165px;
+    width: 300px;
+    margin-bottom: 10%;
+}
 
 .view-more-data-btn-container {
     height: 44px;
-    width: 180px;
+    width: 300px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10%;
+    display: flex;
+    justify-content: space-between;
+    // border: 1px solid black;
 }
 
 .middle-section {
@@ -75,10 +121,69 @@
     font-size: 1.4rem;
 }
 
-// .bottom-section {
-//      ADD THIS BACK IN WHEN YOU HAVE A BOTTOM SECTION
-// }
+.bottom-section {
+    text-align: center;
+    margin-top: 10%;
+}
 
+.bottom-section h1 {
+    font-family: 'acumin';
+    font-size: 3.5rem;
+    margin-bottom:10%;
+}
+
+.data-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5%;
+}
+
+.first-data-point-container {
+    width: 433px;
+}
+
+.first-data-point-container h2 {
+    font-family: 'beatrice';
+    font-size: 3rem;
+}
+
+.first-data-point-container h3 {
+    font-family: 'acumin';
+    font-size: 1.2rem;
+}
+
+.second-data-point-container {
+    width: 433px;
+}
+
+.second-data-point-container h2 {
+    font-family: 'beatrice_regular';
+    font-size: 3rem;
+}
+
+.second-data-point-container h3 {
+    font-family: 'acumin';
+    font-size: 1.2rem;
+}
+
+.third-data-point-container {
+    width: 433px;
+}
+
+.third-data-point-container h2 {
+    font-family: 'beatrice';
+    font-size: 3rem;
+}
+
+.third-data-point-container h3 {
+    font-family: 'acumin';
+    font-size: 1.2rem;
+}
+
+.read-more-btn {
+    display: inline-flex;
+  }
+  
 .back-to-top {
     width: 8%;
     font-size: 1.2rem;
@@ -86,6 +191,10 @@
     color: black;
     margin: 5% auto;
 }
+
+.arrow {
+    margin-left: 5px; /* Adjust as needed */
+  }
 
 .ant-space-align-center {
     @media (max-width: 375px) {
@@ -180,6 +289,7 @@
 
     .bottom-section h1 {
         font-size: 2rem;
+        font-family: 'acumin';
     }
 
     .data-container {
@@ -202,6 +312,10 @@
         width: 85%;
         margin-bottom: 5%;
     }
+
+    .read-more-btn {
+        display: inline-flex;
+      } 
 
     .back-to-top {
         width: 35%;
@@ -430,7 +544,15 @@
 
     .back-to-top {
         width: 35%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
     }
+
+    .arrow {
+        margin-left: 5px; /* Adjust as needed */
+      }
 
     .ant-space-align-center {
         display: flex;
@@ -545,7 +667,15 @@
 
     .back-to-top {
         width: 35%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
     }
+
+    .arrow {
+        margin-left: 5px; /* Adjust as needed */
+      }
 
     .ant-space-align-center {
         display: flex;
@@ -768,3 +898,4 @@
         width: 35%;
     }
 }
+@primary-color: #ec3944;@link-color:  #ec3944;@success-color: #52c41a;@warning-color: #faad14;@error-color: #f5222d;@font-size-base: 14px;@heading-color: rgba(0, 0, 0, 0.85);@text-color: rgba(0, 0, 0, 0.65);@text-color-secondary: rgba(0, 0, 0, 0.45);@disabled-color: rgba(0, 0, 0, 0.25);@border-radius-base: 2px;@border-color-base: #d9d9d9;@box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
